[package]
name = "theia"
version = "0.0.1"
authors = ["Pim Witlox"]
edition = "2021"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
home = "0.5"
clap = "4.4"
dirs = "5.0"
redis = "0.27.2"
serde_json = "1.0.111"
tokio = "1.40.0"
chrono = "0.4.38"

[dev-dependencies]
rand = "0.8"
pretty_assertions = "1.4.1"
testcontainers = "0.23.1"

[lib]
name = "libtheia"
test = true
doctest = true
bench = false
doc = true

[[bin]]
name = "theia"
test = false
doctest = false
bench = false
doc = true

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
